--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
           <artifactId>hibernate-core</artifactId>
           <version>5.0.5.Final</version>
       </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.37</version>
+      </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.16.6</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>library</finalName>
