--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
           <artifactId>spring-orm</artifactId>
           <version>4.2.3.RELEASE</version>
       </dependency>
-
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aspects</artifactId>
+          <version>4.2.3.RELEASE</version>
+      </dependency>
 
   </dependencies>
   <build>
