--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
           <artifactId>spring-aspects</artifactId>
           <version>4.2.3.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.4</version>
+      </dependency>
 
   </dependencies>
   <build>
