--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
           <artifactId>spring-aspects</artifactId>
           <version>4.2.3.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>jstl</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
+
 
   </dependencies>
   <build>
