--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
   <version>1.0-SNAPSHOT</version>
   <name>library Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.install.source>1.8</maven.install.source>
+    <maven.install.target>1.8</maven.install.target>
+    <maven.package.source>1.8</maven.package.source>
+    <maven.package.target>1.8</maven.package.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
