--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+      <java-version>1.8</java-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -85,9 +86,24 @@
           <version>2.2</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.apache.tomcat</groupId>
+          <artifactId>tomcat-servlet-api</artifactId>
+          <version>8.0.29</version>
+          <scope>provided</scope>
+      </dependency>
+
+
 
   </dependencies>
-  <build>
-    <finalName>library</finalName>
-  </build>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
