--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+                <configuration>
+                    <!-- http port -->
+                    <port>9090</port>
+                    <!-- application path always starts with /-->
+                    <path>/</path>
+                </configuration>
             </plugin>
         </plugins>
     </build>
